<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_25r"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/askSaveGame"
            android:textColor="#000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/messageSaveGame"
            android:textColor="#696969"
            android:textSize="19sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="#00000000"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btn_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_save"
                android:background="#00000000"
                android:text="@string/discard"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="19sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>