<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:onClick="logout"
        android:text="@string/logout"
        android:textStyle="bold"
        android:background="@drawable/button_style"
        android:textColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/tv_logout"
        android:gravity="center"
        android:text="@string/helloMessage"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_hello"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:onClick="clickCreateNewGame"
        android:text="@string/newGame"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_new_game"
        android:background="@drawable/border_2dp_black_stroke">

        <TextView
            android:id="@+id/tv_load_saved_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_2dp_black_stroke"
            android:gravity="center"
            android:text="@string/loadSavedGames"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_saved_games"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_load_saved_games" />
    </RelativeLayout>
</RelativeLayout>