<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WinActivity">

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/winningMessage"
        android:textColor="@color/colorBlack"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_buttons"
        android:layout_below="@+id/tv_winner"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_star"
            android:contentDescription="@string/winningStar" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/star1"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_star"
            android:contentDescription="@string/winningStar" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_star"
            android:contentDescription="@string/winningStar" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="clickBackHome"
            android:text="@string/backHome"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="clickNewGame"
            android:text="@string/newGame"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            tools:ignore="NestedWeights" />

    </LinearLayout>
</RelativeLayout>