<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/back_ground">

        <TextView
            android:id="@+id/tv_login_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_message"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mainTitle"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="0.4"
        android:background="@color/colorWhite"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/tv_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/fullname"
                    android:textColor="#DD7826"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_fullname"
                    android:background="@drawable/edittext_style"
                    android:gravity="start|center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="7dp"
                    tools:ignore="LabelFor" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/username"
                    android:textColor="#DD7826"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_username"
                    android:background="@drawable/edittext_style"
                    android:gravity="start|center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="7dp"
                    tools:ignore="LabelFor" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/password"
                    android:textColor="#DD7826"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_password"
                    android:background="@drawable/edittext_style"
                    android:gravity="start|center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="7dp"
                    tools:ignore="LabelFor" />

                <ImageButton
                    android:id="@+id/img_show_hide_password"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/tv_password"
                    android:layout_alignParentEnd="true"
                    android:background="#00000000"
                    android:onClick="ShowHidePassword"
                    android:contentDescription="@string/showHidePassword"
                    android:padding="7dp"
                    android:src="@drawable/ic_eye" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_style"
                android:minWidth="150dp"
                android:onClick="clickRegister"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>