<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".activities.GameActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_total_rolls_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:text="@string/totalDiceRolls"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_total_rolls"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/tv_total_rolls_label"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:importantForAutofill="no"
                android:textColor="@color/colorRed"
                android:textSize="25sp" />
        </RelativeLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="clickNewGame"
                android:text="@string/newGame"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                tools:ignore="NestedWeights" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="clickSaveGame"
                android:text="@string/saveGame"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll3"
        android:layout_below="@+id/ll1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/rl2">

                <GridView
                    android:id="@+id/gv_game"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:numColumns="4" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ll_player_turn">

                    <TextView
                        android:id="@+id/tv_dice_result"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edittext_style"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/btn_roll_dice"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/tv_dice_result"
                        android:background="@drawable/button_style"
                        android:onClick="clickRollDice"
                        android:text="@string/rollDice"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_player_turn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:minWidth="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:text="@string/currentTurn"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/tv_current_player"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/edittext_style"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:text="@string/currentPlayerNumber"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_instructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:padding="5dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:padding="2dp">


    </RelativeLayout>

</RelativeLayout>